# wasm-array

./: Cargo.toml  LICENSE
arraylib/: Cargo.toml
arraylib/src/: array.rs  arraylike.rs  bool.rs  cast.rs  colors.rs  dtype.rs  error.rs  fft.rs  lib.rs  log.rs  reductions.rs  typedarray.rs  util.rs
arraylib/src/color_data/: cividis.raw  generate.py  hue.raw  inferno.raw  magma.raw  plasma.raw  sinebow.raw
arraylib/tests/: arithmetic.rs  arraylike.rs  dtype.rs  reductions.rs  slicing.rs
arraylib_macro/: Cargo.toml
arraylib_macro/src/: lib.rs
wasm-array/: Cargo.toml  index.html  index.js  jest-custom-matchers.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
wasm-array/pkg/: index.js
wasm-array/src/: expr.rs  lib.rs  types.rs
wasm-array/tests/: arithmetic.test.ts  creation.test.ts  expr.test.ts  manipulation.test.ts  reduction.test.ts
