[package]
name = "arraylib"
version = "0.1.0"
edition = "2021"

[dependencies]
arraylib_macro = { path = "../arraylib_macro" }
bytemuck.workspace = true
ndarray.workspace = true
num.workspace = true
num-complex.workspace = true
zerocopy.workspace = true
itertools.workspace = true
include_bytes_aligned = "0.1.3"

[dev-dependencies]
rstest.workspace = true