[package]
name = "arraylib"
version = "0.1.0"
edition = "2021"

[dependencies]
arraylib_macro = { path = "../arraylib_macro" }
bytemuck.workspace = true
ndarray.workspace = true
num.workspace = true
num-complex.workspace = true
zerocopy.workspace = true
itertools.workspace = true
include_bytes_aligned = "0.1.3"
paste = "1.0"
rustfft = { version = "6.2.0", features = ["wasm_simd"] }

[dev-dependencies]
rstest.workspace = true
