[package]
name = "arraylib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamically-typed N-dimensional array library"

[dependencies]
arraylib_macro = { path = "../arraylib_macro" }
bytemuck.workspace = true
itertools.workspace = true
ndarray.workspace = true
num.workspace = true
num-complex.workspace = true
paste.workspace = true
ordered-float.workspace = true
zerocopy.workspace = true
include_bytes_aligned = "0.1.3"
rustfft = { version = "6.2.0", features = ["wasm_simd"] }

[dev-dependencies]
rstest.workspace = true
