[package]
name = "arraylib_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Helper macros for arraylib"

[lib]
name = "arraylib_macro"
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = ["full", "parsing"] }
proc-macro2 = "^1.0"
quote = "^1.0"
