[package]
name = "wasm-array"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arraylib = { path = "../arraylib" }
serde = { version = "^1.0", features = ["derive"] }
serde_bytes = "^0.11"
wasm-bindgen = { version = "0.2.85", features = ["serde-serialize"] }
serde-wasm-bindgen = "^0.4"
console_error_panic_hook = { version = "0.1.1" }
js-sys = "^0.3.69"
logos = "^0.14.0"
itertools.workspace = true
num.workspace = true
ndarray.workspace = true

[dependencies.web-sys]
version = "^0.3.69"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
