[package]
name = "wasm-array"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "N-dimensional array library for webassembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
arraylib = { path = "../arraylib" }
base64.workspace = true
itertools.workspace = true
num.workspace = true
ndarray.workspace = true
console_error_panic_hook = { version = "0.1.1" }
js-sys = "^0.3.69"
logos = "^0.14.0"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
wasm-bindgen = { version = "=0.2.93", features = ["serde-serialize"] }
